--- a/css/custom-home.css
+++ b/css/custom-home.css
@@ -11,6 +11,15 @@
 
 /* CUSTOM STILIUS SEKCIJOMS */
 /* header */
+/* hero */
+/* clients */
 /* services */
+/* about company */
+/* hire us */
 /* achievements */
+/* promo video */
+/* case studies */
+/* testimonials */
+/* blog */
+/* contacts */
 /* footer */
