--- a/css/components/button.css
+++ b/css/components/button.css
@@ -15,3 +15,19 @@
   .btn:hover {
     box-shadow: 0 4px 8px #0003;
   }
+
+  
+  .btn.white{
+    background-color: #fff;
+    color: var(--color-blue);
+  }
+
+
+  .btn.creame{
+    background-color: var(--color-creame-dark);
+    color:#fff;
+  }
+  .btn.creame:hover {
+    background-color: var(--color-blue);
+    color:#fff;
+  }
