--- a/css/custom-home.css
+++ b/css/custom-home.css
@@ -6,6 +6,7 @@
 /* 3rd party */
 @import './3rd-party/font-awesome.min.css';
 /* components */
+@import './components/button.css';
 @import './components/footer.css';
 @import './components/header.css';
 
