--- a/css/init/base.css
+++ b/css/init/base.css
@@ -1,3 +1,10 @@
+/* FONTS */
+@font-face{
+  font-family: 'Roboto';
+  src: url(../../fonts/roboto/Roboto-Regular.ttf) format('truetype');
+}
+
+
 .bg-creame {
     background-color: var(--color-creame);
   }
@@ -12,4 +19,46 @@
   }
   .bg-grey {
     background-color: var(--color-grey);
+  }
+
+  .center {
+    text-align: center;
+  }
+
+  .title {
+    display: inline-block;
+    width: 100%;
+    font-size:16px;
+    line-height:20px ;
+    color: var(--color-grey-dark);
+    text-transform: uppercase;
+  }
+
+
+  .subtitle {
+    display: inline-block;
+    width: 100%;
+    font-size:34px;
+    line-height:40px ;
+    color: #333;
+
+  }
+  .subtitle > .selected {
+    color: var(--color-blue);
+  }
+
+  .botton-text-link {
+    text-align: center;
+    font-size:20px;
+    line-height:20px ;
+    color: #444;
+    font-weight: bold;
+
+  }
+
+  .botton-text-link > a {
+    color: var(--color-blue);
+    text-decoration: none;
+    border-bottom: 1px solid var(--color-grey-dark);
+  
   }
