special style for button in custom css

--- a/css/custom-home.css
+++ b/css/custom-home.css
@@ -16,11 +16,15 @@
 /* clients */
 /* services */
 /* about company */
-/* hire us */
 /* achievements */
 /* promo video */
 /* case studies */
 /* testimonials */
 /* blog */
 /* contacts */
+.contact-us .btn {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
 /* footer */
