--- a/css/components/services.css
+++ b/css/components/services.css
@@ -1,38 +1,33 @@
 .service-item {
-padding: 60px 40px;
-margin-bottom: 60px;
-border-radius: 6px;
-text-align: center; 
-background-color: #fff;  
-box-shadow: 0px 12px 30px #5553;
-position: relative;
-transition: all 1s;
-}
-  
-.service-item > img {
- margin-bottom: 40px;
-}
-
-.service-item > h4 {
-margin-bottom: 20px;
-font-size: 24px;
-line-height: 30px;
-font-weight: normal;
-text-transform: capitalize;
-}
-
-.service-item > p {
+    padding: 60px;
+    margin-bottom: 50px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    box-shadow: 0 12px 30px #5553;
+    position: relative;
+  }
+  .service-item > img {
+    margin-bottom: 30px;
+  }
+  .service-item > h4 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: normal;
+    color: #000;
+    text-transform: capitalize;
+  }
+  .service-item > p {
     color: #777;
     font-size: 14px;
     line-height: 27px;
-
-}
-
-.service-item > a {
+  }
+  .service-item > a {
     width: 60px;
     height: 60px;
+    font-size: 24px;
     line-height: 60px;
-    font-size: 20px;
     background-color: var(--color-creame-dark);
     color: #fff;
     text-decoration: none;
@@ -41,11 +36,8 @@ text-transform: capitalize;
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 50%);
-    transition: all 1s; 
-}
-
-.service-item:hover > a {
- 
+    transition: all 1s;
+  }
+  .service-item:hover > a {
     background-color: var(--color-blue);
-   
-}
+  }
